1.1:

* Switching teams now clears player statistics, to prevent situations where a player would earn MVP after switching team for their deeds on the original team
* Fixed team max difference allowing one more player difference than it should

1.0:

+ Created the mod!